design bug fix
view button was spilling over when you create a new course

--- a/frontend/course-inquiry-client/src/styles/Browse.css
+++ b/frontend/course-inquiry-client/src/styles/Browse.css
@@ -47,6 +47,9 @@ padding-bottom: 5px;
 
 .courseList{
     margin-top: -100px;
+    display: flex;
+    height: auto;
+    min-height: 450px;
 }
 .banner img{
     width: 100%;
