--- a/frontend/course-inquiry-client/src/styles/Coursecard.css
+++ b/frontend/course-inquiry-client/src/styles/Coursecard.css
@@ -1,9 +1,21 @@
 .courses{
     display: flex;
+    flex-direction: row;
     gap: 1rem;
     width: 70vw;
+    height: auto;
 
 
+}
+.categories{
+
+    height: auto;
+
+}
+.categories p{
+    padding: 1px;
+    margin-bottom:0px;
+    margin-top: 0px;
 }
 .courses :hover{
     background-image: linear-gradient(to bottom right,   #b2d8d8,#66b2b2);
@@ -23,6 +35,7 @@
     color: white;
     height: 30px;
     width: 130px;
+
 }
 
 
